@startuml

abstract class BaseService<T> {
    #Repository : IRepository<T>
    #_unitOfWork : IUnitOfWork
}

abstract class BaseRepository<T> {
    #_context : DPMSContext
    #_dbSet : DbSet<T>
}

interface IRepository<T> {
    +GetByIdAsync(object id) : Task<T?>
    +DeleteAsync(object id) : Task
}

BaseRepository --|> IRepository

BaseService --|> IService
BaseService --> IRepository : uses IRepository<T>

class RiskController {
    -_riskService : IRiskService

    +DeleteRisk(Guid id) : Task<IActionResult>
}

class RiskService {
}

interface IRiskService {
}

interface IService<T> {
    +GetByIdAsync(object id) : Task<T?>
    +DeleteAsync(object id) : Task
}

IRiskService --|> IService
RiskService --|> IRiskService
RiskService --|> BaseService : inherits default \nimplementations from
RiskController --> IRiskService

@enduml